--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -242,7 +242,18 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 	(<a style="color: white"; href="mailto:neurips-data-centric-ai@googlegroups.com">neurips-data-centric-ai@googlegroups.com</a>) 
 	<!-- or ask on Discourse (<a style="color: white"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
 	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p>
-
+<div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>FAQ</h3>
+                    <p class="text-muted">
+                        For questions please check <a href="https://groups.google.com/u/1/g/neurips-data-centric-ai" target="_blank">FAQ</a><br>
+      <!--                  PT: 6:00am-12:20am<br>
+                        EST: 9:00am-3:20pm<br>
+                        CET: 2:00pm-8:20pm -->
+                    </p>
+                </div>
+            </div>	
 <p class="text-center">
 <br>
 <a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
