--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -244,13 +244,8 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p>
 
 <p class="text-center">
-<br>
-<a href="https://groups.google.com/u/1/g/neurips-data-centric-ai" target="_blank" class="btn btn-default btn-xl">Submission FAQ</a></p>
-                <br>
-		    
-		    <p class="text-center">
-<br>
-<a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
+<br><a href="https://groups.google.com/u/1/g/neurips-data-centric-ai" target="_blank" class="btn btn-default btn-xl">Submission FAQ</a>
+<br><a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
                 <br>
                 <br>
 <h3 class="section-heading text-center" id="topics">Topics of Interest</h3>
