--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -254,7 +254,8 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 <br><a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p> -->
                 <br>
                 <br>
-<h3 class="section-heading text-center" id="topics">Topics of Interest</h3>
+<p>		
+		<h3 class="section-heading text-center" id="topics">Topics of Interest</h3></p>
 <hr class="primary">
 <p class="text-faded">
 Data Centric AI workshop is inviting <span style="color: white; font-weight: bold">position papers</span> from researchers and practitioners on topics that include but not limited to the following:
