--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -243,7 +243,7 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 	<!-- or ask on Discourse (<a style="color: white"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
 	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p>
 <p class="text-center">
-		    <div class="button-box col-lg-8">
+		    <div class="button-box col-lg-8 text-center">
 <a href="https://groups.google.com/u/1/g/neurips-data-centric-ai" target="_blank" class="btn btn-default btn-xl">Submission FAQ</a>
 <a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a>
 		    </div></p>
