--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -326,7 +326,8 @@ Data Centric AI workshop is inviting <span style="color: white; font-weight: bol
 			<a href="http://www.codycoleman.com/">Cody Coleman</a>, Stanford University<br>
 			<a href="https://www.linkedin.com/in/gregory-diamos-1a8b9083/">Greg Diamos</a>, Landing AI<br>
 			<a href="https://scholar.harvard.edu/vijay-janapa-reddi/home">Vijay Janapa Reddi</a>, Harvard University<br>	    
-			<a href="https://joaquinvanschoren.github.io/home/">Joaquin Vanschoren</a>, Eindhoven University of Technology<br>	    
+			<a href="https://joaquinvanschoren.github.io/home/">Joaquin Vanschoren</a>, Eindhoven University of Technology<br>
+			<a href="https://ai.facebook.com/people/carole-jean-wu/">Carole-Jean Wu</a>, Facebook<br>
 			<a href="https://sharonzhou.me/">Sharon Zhou</a>, Stanford University<br>		    
                 </p>
                 <br>
