--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -163,7 +163,8 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
                     <h3>Submission Deadline</h3>
-			<p class="text-muted">September 30, 2021 (11:59 PM <a href="https://time.is/Anywhere_on_Earth">AOE</a>) </p>
+			<p class="text-muted">September 30, 2021 <br>
+				(11:59 PM <a href="https://time.is/Anywhere_on_Earth">AOE</a>) </p>
                 </div>
             </div> 
             <div class="col-lg-3 col-md-6 text-center">
