--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   
 Data is critical for building and testing AI/ML systems. This page gathers resources, workshops, challenges, and communities focused on data.
 <ul>
-  <li><a href="https://sadworkshop.wordpress.com/2018-edition/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2018 </a></li>
-<li><a href="https://sadworkshop.wordpress.com/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2019 </a></li>
-  <li><a href="reais-2019.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2019 </a></li>
-  <li><a href="reais-2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
-  <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
+  <li><a href="https://eval.how/dcai2021/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
   <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a></li>
-  </ul>
+  <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
+  <li><a href="reais-2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
+  <li><a href="reais-2019.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2019 </a></li>
+  <li><a href="https://sadworkshop.wordpress.com/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2019 </a></li>
+  <li><a href="https://sadworkshop.wordpress.com/2018-edition/">Subjectivity, Ambiguity, and Disagreement in Data (SAD) WWW 2018 </a></li>
+ </ul>
 
 Please fill out this one minute <a href="https://docs.google.com/forms/d/1e-ZkasJ2Xpl-MD5Msi0-5cQru05Zid2GOoCENCWqibk/edit?ts=5fd2df15&gxids=7628">data interest survey</a> if you are interested in this community and join the mailing list. 
 <br><br><br>
