--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <h1>Data Excellence and Rigorous Evaluation for AI/ML</h1>
   
 Data is critical for building and testing AI/ML systems. This page gathers resources, workshops, challenges, and communities focused on data.
+
+<h2>Scientific Workshops </h2>
 <ul>
   <li><a href="https://eval.how/dcai2021/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
   <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a></li>
