--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>	
 <title> Data Excellence and Rigorous Evaluation for AI/ML</title>
 
-<body bgcolor="FFE5CC">
+<body bgcolor="#FFFFFF" style="font-family:arial" style="font-size:14px">
 <h1>Data Excellence and Rigorous Evaluation for AI/ML</h1>
   
 Data is critical for building and testing AI/ML systems. This page gathers resources, workshops, challenges, and communities focused on data.
