--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Data is critical for building and testing AI/ML systems. This page gathers resou
 
 <h2>Scientific Workshops </h2>
 <ul>
-  <li><a href="https://eval.how/dcai2021/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
+  <li><a href="http://datacentricai.org/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
   <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a></li>
   <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
   <li><a href="reais-2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
