--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 Data is critical for building and testing AI/ML systems. This page gathers resources, workshops, challenges, and communities focused on data.
 
 <h2>Scientific Workshops </h2>
-<ul>
+<ul style="list-style-type:disc">
   <li><a href="http://datacentricai.org/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
   <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a></li>
   <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
