--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2>Scientific Workshops </h2>
 <ul style="list-style-type:disc">
   <li><a href="http://datacentricai.org/"> NeurIPS Data Centric AI Workshop 2021 </a></li>
-  <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a>, (<a href="https://underline.io/events/27/sessions/692/lecture/4760-workshop-1-data-excellence-(dew-2020)">video</a>), (<a href="https://github.com/paritos/paritos.github.io/blob/master/DEW2020%20Master%20Slide%20Deck.pdf">slides</a>)</li>
+  <li><a href="dew2020/index.html">Data Excellence Workshop (DEW) at HCOMP 2020 </a>, (<a href="https://underline.io/events/27/sessions/692/lecture/4760-workshop-1-data-excellence-(dew-2020)">video</a>), (<a href="https://github.com/paritos/paritos.github.io/blob/master/DEW2020%20Master%20Slide%20Deck.pdf">slides</a>), (<a href="https://github.com/paritos/paritos.github.io/blob/master/DEW2020%20Summary%20images.pdf">visual summaries</a>)</li>
   <li><a href="aaai-2020/index.html">Evaluating Evaluation of AI Systems (META-EVAL) AAAI 2020 </a></li>
   <li><a href="reais-2020/index.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2020 </a></li>
   <li><a href="reais-2019.html">Rigorous Evaluation of AI Systems (REAIS) HCOMP 2019 </a></li>
