--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <p> Measurement of AI success today is often metrics-driven, with emphasis on rigorous model measurement and A/B testing. However, measuring the goodness of the fit of the model to the dataset ignores any consideration of how well the dataset fits the real world problem. Goodness-of-fit metrics, such as F1, Accuracy, AUC, do not tell us much about data fidelity (i.e., how well the dataset represents reality) and validity (how well the data explains things related to the phenomena captured by the data). No standardised metrics exist today for characterising the goodness-of-data. </p>
 
-<p>This page gathers resources, workshops, challenges, and communities focused on data for building and testing AI/ML systems.</p>
+<p><bold>This page gathers resources, workshops, challenges, and communities focused on data for building and testing AI/ML systems.</bold></p>
 
 
 <h2>Scientific Workshops </h2>
